--- a/apps/frontend/src/i18n/en.json
+++ b/apps/frontend/src/i18n/en.json
@@ -22,7 +22,9 @@
     "available": "App Available",
     "serverOffline": "Server is offline - App is unavailable",
     "installPWA": "Install PWA",
-    "deleteStorage": "Delete all storage"
+    "deleteStorage": "Delete all storage",
+    "failedCreate": "Failed to create session",
+    "savedSessionDescription": "List of sessions that you can continue"
   },
   "navbar": {
     "leave": "leave",
@@ -51,7 +53,26 @@
     "username": "Username",
     "password": "Password",
     "login": "Login",
-    "loginFailed": "Login failed"
+    "loginFailed": "Login failed",
+    "continueAsGuest": "Continue as Guest",
+    "createAccount": "Create account",
+    "createAccountDescription": "Create account to save your data.",
+    "signout": "sign out",
+    "deleteAccount": "Delete account",
+    "edit": "Edit account",
+    "editTitle": "Edit Account",
+    "editDescription": "Edit your information.",
+    "displayName": "Display name",
+    "displayNameDescription": "This is your display name.",
+    "userName": "User name",
+    "userNameDescription": "This is your user name for login.",
+    "update": "Update",
+    "oldPassword": "Old password",
+    "newPassword": "New password",
+    "confirmPassword": "Confirm password",
+    "email": "Email",
+    "image": "Image",
+    "guest": "Guest user"
   },
   "sidebar": {
     "dashboard": "Dashboard",
@@ -105,12 +126,18 @@
   "logbuffer": {
     "tooManyLogs": "Too many messages. old logs removed."
   },
-  "generic": {
+  "general": {
     "connected": "Connected",
     "websocketNotConnected": "Websocket is not connected",
     "open": "Open",
     "audio": "Audio",
-    "text": "Text"
+    "text": "Text",
+    "delete": "Delete",
+    "edit": "Edit",
+    "back": "Back",
+    "save": "Save",
+    "upload": "Upload",
+    "download": "Download"
   },
   "tour": {
     "joinCode": "This is code for this session. You can return back here with saving this code for next time.",
@@ -148,7 +175,79 @@
     "loading": "Loading",
     "sessionSummary": "Session summary",
     "showHeatmap": "Show Heatmap",
-    "noScreenshotAvailable": "No screenshot available"
+    "noScreenshotAvailable": "No screenshot available",
+    "title": "Admin",
+    "workspacePreview": "Workspace preview",
+    "stats": "Stats",
+    "totalInvokedLLM": "Total invoked LLM",
+    "currentNumOfBlocks": "Current number of blocks",
+    "totalConnectingTime": "Total connecting time",
+    "totalUserMessages": "Total number of user message",
+    "totalCodeExecutions": "Total number of code execution",
+    "lastUpdatedTime": "Last updated time",
+    "createdTime": "Created time",
+    "selectedTutorial": "Selected tutorial",
+    "tutorialId": "Tutorial id",
+    "tutorialTitle": "Tutorial title",
+    "notSelected": "not selected",
+    "user": "User",
+    "sessionId": "Session id",
+    "actions": "Actions",
+    "deleteSession": "Delete",
+    "sessionNotFound": "Session not found",
+    "sessions": "Sessions",
+    "sessionAnalyticsDialog": "Session analytics dialog",
+    "autoUpdate": "Auto update",
+    "downloading": "Downloading",
+    "downloadAll": "Download all sessions",
+    "sessionsForUser": "Sessions for user {{user}}",
+    "tutorialDescription": "Tutorial description",
+    "tutorialLanguage": "Language",
+    "tutorialTags": "Tags",
+    "tutorialSelectCount": "Select count",
+    "edit": "Edit",
+    "tutorials": "Tutorials",
+    "username": "Username",
+    "role": "Role",
+    "admin": "Admin",
+    "uploader": "Uploader",
+    "uploaderDescription": "Upload tutorial",
+    "addNode": "Add node",
+    "basic": "Basic",
+    "content": "Content",
+    "writeContent": "Write your content here",
+    "metadata": "Metadata",
+    "writeMetadata": "Write your metadata here",
+    "advanced": "Advanced",
+    "example": "Example code",
+    "createExample": "Create example code",
+    "refineContent": "Refine content",
+    "generateContent": "Generate new content from existing content",
+    "refineMetadata": "Refine metadata",
+    "generateMetadata": "Generate metadata from content",
+    "generatedMdComparison": "Comparison",
+    "generateMarkdown": "Generate markdown",
+    "generatingMarkdown": "Generating...",
+    "originalMd": "Original markdown",
+    "generatedMd": "Generated markdown",
+    "metadataGenerator": "Metadata generator",
+    "originalMetaData": "Original metadata",
+    "generatedMetaData": "Generated metadata",
+    "noName": "No name",
+    "noUsername": "No user name",
+    "noEmail": "No Email",
+    "noDate": "No date",
+    "welcome": "Welcome to TutoriaLLM",
+    "dashboard": "Admin dashboard",
+    "tutorialsDescription": "Check created tutorials",
+    "sessionsDescription": "Monitor users session",
+    "trainingDescription": "Train AI tutor",
+    "training": "AI training",
+    "settings": "Settings",
+    "createTutorial": "Create new tutorial",
+    "createUser": "Create new user",
+    "email": "Email",
+    "password": "Password"
   },
   "quickReply": {
     "WhatINeed": "What I need to do?",
@@ -184,5 +283,31 @@
     "replaysSessionSampleRate": "Sample Rate for Replays on Session",
     "tracesSampleRate": "Sample Rate for Traces",
     "GA_Tracking_ID": "Google Analytics Tracking ID"
+  },
+  "toast": {
+    "failedToUpdateInfo": "Fail to update user information.",
+    "updatedInfo": "User information updated.",
+    "failedToUpdatePassword": "Failed to update password.",
+    "updatedPassword": "Password updated.",
+    "deletedTutorial": "Tutorial deleted",
+    "failedToDeleteTutorial": "Failed to delete tutorial",
+    "failedToDeleteUser": "Failed to delete user",
+    "deletedUser": "User deleted",
+    "failedToUpdateRole": "Failed to update role",
+    "updatedRole": "Role updated",
+    "createdTutorial": "Tutorial created",
+    "failedToCreateTutorial": "Failed to create tutorial",
+    "updatedTutorial": "Updated tutorial",
+    "failedToUpdateTutorial": "Failed to update tutorial",
+    "uploadedTutorial": "Tutorial uploaded",
+    "updatedUser": "User detail updated",
+    "failedToUpdateUser": "Failed to update user"
+  },
+  "generic": {
+    "audio": "Audio",
+    "connected": "Connected",
+    "open": "Open",
+    "text": "Text",
+    "websocketNotConnected": "Websocket is not connected"
   }
 }
