--- a/apps/frontend/src/i18n/ja.json
+++ b/apps/frontend/src/i18n/ja.json
@@ -14,7 +14,26 @@
     "username": "ユーザー名",
     "password": "パスワード",
     "login": "ログイン",
-    "loginFailed": "ログインに失敗しました"
+    "loginFailed": "ログインに失敗しました",
+    "confirmPassword": "パスワードを認証する",
+    "continueAsGuest": "ゲストとして続行",
+    "createAccount": "アカウントを作成する",
+    "createAccountDescription": "データを保存するためにアカウントを作成します。",
+    "deleteAccount": "アカウントを削除する",
+    "displayName": "表示名",
+    "displayNameDescription": "これはあなたの表示名です。",
+    "edit": "アカウントの編集",
+    "editDescription": "情報を編集します。",
+    "editTitle": "アカウントの編集",
+    "email": "電子メール",
+    "guest": "ゲストユーザー",
+    "image": "画像",
+    "newPassword": "新しいパスワード",
+    "oldPassword": "以前のパスワード",
+    "signout": "サインアウト",
+    "update": "アップデート",
+    "userName": "ユーザー名",
+    "userNameDescription": "これはログイン用のユーザー名です。"
   },
   "navbar": {
     "connected": "接続されています",
@@ -51,7 +70,9 @@
     "serverOffline": "サーバーはオフラインです - アプリは利用できません",
     "serverOnline": "オンライン",
     "installPWA": "PWAとしてインストールする",
-    "deleteStorage": "全ての保存内容を削除する"
+    "deleteStorage": "全ての保存内容を削除する",
+    "failedCreate": "セッションの作成に失敗しました",
+    "savedSessionDescription": "継続できるセッションのリスト"
   },
   "sidebar": {
     "dashboard": "ダッシュボード",
@@ -148,7 +169,79 @@
     "loading": "読み込み中です",
     "sessionSummary": "セッションのサマリー",
     "showHeatmap": "ヒートマップを表示",
-    "noScreenshotAvailable": "スクリーンショットが利用できません"
+    "noScreenshotAvailable": "スクリーンショットが利用できません",
+    "actions": "アクション",
+    "addNode": "ノードの追加",
+    "admin": "管理者",
+    "advanced": "高度な",
+    "autoUpdate": "自動更新",
+    "basic": "基本",
+    "content": "コンテンツ",
+    "createExample": "サンプルコードを作成する",
+    "createTutorial": "新しいチュートリアルを作成する",
+    "createUser": "新しいユーザーを作成する",
+    "createdTime": "作成時間",
+    "currentNumOfBlocks": "現在のブロック数",
+    "dashboard": "管理者ダッシュボード",
+    "deleteSession": "消去",
+    "downloadAll": "すべてのセッションをダウンロードする",
+    "downloading": "ダウンロード中",
+    "edit": "編集",
+    "email": "電子メール",
+    "example": "コード例",
+    "generateContent": "既存のコンテンツから新しいコンテンツを生成する",
+    "generateMarkdown": "マークダウンの生成",
+    "generateMetadata": "コンテンツからメタデータを生成する",
+    "generatedMd": "生成されたマークダウン",
+    "generatedMdComparison": "比較",
+    "generatedMetaData": "生成されたメタデータ",
+    "generatingMarkdown": "生成中...",
+    "lastUpdatedTime": "最終更新時間",
+    "metadata": "メタデータ",
+    "metadataGenerator": "メタデータジェネレーター",
+    "noDate": "日付なし",
+    "noEmail": "メールなし",
+    "noName": "名前なし",
+    "noUsername": "ユーザー名がありません",
+    "notSelected": "選択されていません",
+    "originalMd": "オリジナルの値下げ",
+    "originalMetaData": "元のメタデータ",
+    "password": "パスワード",
+    "refineContent": "コンテンツを絞り込む",
+    "refineMetadata": "メタデータを絞り込む",
+    "role": "役割",
+    "selectedTutorial": "選択したチュートリアル",
+    "sessionAnalyticsDialog": "セッション分析ダイアログ",
+    "sessionId": "セッションID",
+    "sessionNotFound": "セッションが見つかりません",
+    "sessions": "セッション",
+    "sessionsDescription": "ユーザーセッションを監視する",
+    "sessionsForUser": "ユーザー {{user}} のセッション",
+    "settings": "設定",
+    "stats": "統計",
+    "title": "管理者",
+    "totalCodeExecutions": "コード実行の総数",
+    "totalConnectingTime": "合計接続時間",
+    "totalInvokedLLM": "呼び出されたLLMの合計",
+    "totalUserMessages": "ユーザーメッセージの総数",
+    "training": "AIトレーニング",
+    "trainingDescription": "AI家庭教師を訓練する",
+    "tutorialDescription": "チュートリアルの説明",
+    "tutorialId": "チュートリアルID",
+    "tutorialLanguage": "言語",
+    "tutorialSelectCount": "カウントを選択",
+    "tutorialTags": "タグ",
+    "tutorialTitle": "チュートリアルのタイトル",
+    "tutorials": "チュートリアル",
+    "tutorialsDescription": "作成したチュートリアルを確認する",
+    "uploader": "アップローダー",
+    "uploaderDescription": "チュートリアルをアップロードする",
+    "user": "ユーザー",
+    "username": "ユーザー名",
+    "welcome": "TutoriaLLM へようこそ",
+    "workspacePreview": "ワークスペースのプレビュー",
+    "writeContent": "ここにコンテンツを書いてください",
+    "writeMetadata": "ここにメタデータを書き込みます"
   },
   "quickReply": {
     "HowToUse": "どうやって使うの？",
@@ -184,5 +277,37 @@
     "tracesSampleRate": "Sentryのトレースのサンプルレート",
     "GA_Tracking_ID": "Google Analytics トラッキング ID",
     "Chat_Audio": "音声モード"
+  },
+  "general": {
+    "audio": "オーディオ",
+    "back": "戻る",
+    "connected": "接続済み",
+    "delete": "消去",
+    "download": "ダウンロード",
+    "edit": "編集",
+    "open": "開ける",
+    "save": "保存",
+    "text": "文章",
+    "upload": "アップロード",
+    "websocketNotConnected": "WebSocketが接続されていません"
+  },
+  "toast": {
+    "createdTutorial": "チュートリアルを作成しました",
+    "deletedTutorial": "チュートリアルが削除されました",
+    "deletedUser": "ユーザーが削除されました",
+    "failedToCreateTutorial": "チュートリアルの作成に失敗しました",
+    "failedToDeleteTutorial": "チュートリアルの削除に失敗しました",
+    "failedToDeleteUser": "ユーザーの削除に失敗しました",
+    "failedToUpdateInfo": "ユーザー情報の更新に失敗しました。",
+    "failedToUpdatePassword": "パスワードの更新に失敗しました。",
+    "failedToUpdateRole": "役割の更新に失敗しました",
+    "failedToUpdateTutorial": "チュートリアルの更新に失敗しました",
+    "failedToUpdateUser": "ユーザーの更新に失敗しました",
+    "updatedInfo": "ユーザー情報を更新しました。",
+    "updatedPassword": "パスワードが更新されました。",
+    "updatedRole": "役割が更新されました",
+    "updatedTutorial": "チュートリアルを更新しました",
+    "updatedUser": "ユーザーの詳細が更新されました",
+    "uploadedTutorial": "チュートリアルがアップロードされました"
   }
 }
