--- a/apps/frontend/src/i18n/ta.json
+++ b/apps/frontend/src/i18n/ta.json
@@ -22,7 +22,8 @@
     "Sentry_DSN": "சென்ட்ரி டிஎஸ்என்(முடக்க காலியாக விடவும்)",
     "replaysOnErrorSampleRate": "பிழையின் மீள்பதிவுகளுக்கான மாதிரி வீதம்",
     "replaysSessionSampleRate": "அமர்வில் மீண்டும் விளையாடுவதற்கான மாதிரி விகிதம்",
-    "tracesSampleRate": "தடயங்களுக்கான மாதிரி விகிதம்"
+    "tracesSampleRate": "தடயங்களுக்கான மாதிரி விகிதம்",
+    "Chat_Audio": "அரட்டை ஆடியோ முறை"
   },
   "admin": {
     "loading": "ஏற்றுகிறது",
@@ -34,7 +35,79 @@
     "sessionSummary": "அமர்வு சுருக்கம்",
     "showHeatmap": "ஹீட்மேப்பைக் காட்டு",
     "summary": "சுருக்கம்",
-    "workspace": "பணியிடம்"
+    "workspace": "பணியிடம்",
+    "actions": "செயல்கள்",
+    "addNode": "முனையைச் சேர்க்கவும்",
+    "admin": "நிர்வாகி",
+    "advanced": "மேம்பட்டது",
+    "autoUpdate": "தானியங்கு மேம்படுத்தல்",
+    "basic": "அடிப்படை",
+    "content": "உள்ளடக்கம்",
+    "createExample": "உதாரணக் குறியீட்டை உருவாக்கவும்",
+    "createTutorial": "புதிய பயிற்சியை உருவாக்கவும்",
+    "createUser": "புதிய பயனரை உருவாக்கவும்",
+    "createdTime": "உருவாக்கப்பட்ட நேரம்",
+    "currentNumOfBlocks": "தொகுதிகளின் தற்போதைய எண்ணிக்கை",
+    "dashboard": "நிர்வாக டாஷ்போர்டு",
+    "deleteSession": "நீக்கு",
+    "downloadAll": "அனைத்து அமர்வுகளையும் பதிவிறக்கவும்",
+    "downloading": "பதிவிறக்குகிறது",
+    "edit": "திருத்தவும்",
+    "email": "மின்னஞ்சல்",
+    "example": "எடுத்துக்காட்டு குறியீடு",
+    "generateContent": "ஏற்கனவே உள்ள உள்ளடக்கத்திலிருந்து புதிய உள்ளடக்கத்தை உருவாக்கவும்",
+    "generateMarkdown": "மார்க் டவுனை உருவாக்கவும்",
+    "generateMetadata": "உள்ளடக்கத்திலிருந்து மெட்டாடேட்டாவை உருவாக்கவும்",
+    "generatedMd": "உருவாக்கப்பட்ட மார்க் டவுன்",
+    "generatedMdComparison": "ஒப்பீடு",
+    "generatedMetaData": "உருவாக்கப்பட்ட மெட்டாடேட்டா",
+    "generatingMarkdown": "உருவாக்குகிறது...",
+    "lastUpdatedTime": "கடைசியாக புதுப்பிக்கப்பட்ட நேரம்",
+    "metadata": "மெட்டாடேட்டா",
+    "metadataGenerator": "மெட்டாடேட்டா ஜெனரேட்டர்",
+    "noDate": "தேதி இல்லை",
+    "noEmail": "மின்னஞ்சல் இல்லை",
+    "noName": "பெயர் இல்லை",
+    "noUsername": "பயனர் பெயர் இல்லை",
+    "notSelected": "தேர்ந்தெடுக்கப்படவில்லை",
+    "originalMd": "அசல் மார்க் டவுன்",
+    "originalMetaData": "அசல் மெட்டாடேட்டா",
+    "password": "கடவுச்சொல்",
+    "refineContent": "உள்ளடக்கத்தைச் செம்மைப்படுத்தவும்",
+    "refineMetadata": "மெட்டாடேட்டாவைச் செம்மைப்படுத்தவும்",
+    "role": "பங்கு",
+    "selectedTutorial": "தேர்ந்தெடுக்கப்பட்ட பயிற்சி",
+    "sessionAnalyticsDialog": "அமர்வு பகுப்பாய்வு உரையாடல்",
+    "sessionId": "அமர்வு ஐடி",
+    "sessionNotFound": "அமர்வு கிடைக்கவில்லை",
+    "sessions": "அமர்வுகள்",
+    "sessionsDescription": "பயனர் அமர்வைக் கண்காணிக்கவும்",
+    "sessionsForUser": "{{user}} பயனருக்கான அமர்வுகள்",
+    "settings": "அமைப்புகள்",
+    "stats": "புள்ளிவிவரங்கள்",
+    "title": "நிர்வாகி",
+    "totalCodeExecutions": "குறியீடு செயல்படுத்தலின் மொத்த எண்ணிக்கை",
+    "totalConnectingTime": "மொத்த இணைக்கும் நேரம்",
+    "totalInvokedLLM": "மொத்தம் எல்எல்எம் பயன்படுத்தப்பட்டது",
+    "totalUserMessages": "பயனர் செய்தியின் மொத்த எண்ணிக்கை",
+    "training": "AI பயிற்சி",
+    "trainingDescription": "பயிற்சி AI ஆசிரியர்",
+    "tutorialDescription": "பயிற்சி விளக்கம்",
+    "tutorialId": "பயிற்சி ஐடி",
+    "tutorialLanguage": "மொழி",
+    "tutorialSelectCount": "எண்ணிக்கையைத் தேர்ந்தெடுக்கவும்",
+    "tutorialTags": "குறிச்சொற்கள்",
+    "tutorialTitle": "பயிற்சி தலைப்பு",
+    "tutorials": "பயிற்சிகள்",
+    "tutorialsDescription": "உருவாக்கப்பட்ட பயிற்சிகளைச் சரிபார்க்கவும்",
+    "uploader": "பதிவேற்றுபவர்",
+    "uploaderDescription": "டுடோரியலைப் பதிவேற்றவும்",
+    "user": "பயனர்",
+    "username": "பயனர் பெயர்",
+    "welcome": "TutoriaLLM க்கு வரவேற்கிறோம்",
+    "workspacePreview": "பணியிட மாதிரிக்காட்சி",
+    "writeContent": "உங்கள் உள்ளடக்கத்தை இங்கே எழுதுங்கள்",
+    "writeMetadata": "உங்கள் மெட்டாடேட்டாவை இங்கே எழுதுங்கள்"
   },
   "dialogue": {
     "Introduction": "ஹாய்! \nஎன்ன செய்ய வேண்டும் என்பதைத் தேர்வுசெய்ய உங்கள் கேள்விகளில் உள்ள விரைவு பதில் பொத்தானைக் கிளிக் செய்யவும்!",
@@ -55,11 +128,16 @@
   },
   "extension": {
     "minecraft-core": {
-      "connectInfo": "**/connect {{host}}/vm/{{userCode}}/mc** இலிருந்து உங்கள் Minecraft ஐ இணைக்கவும். \nஇணைப்பு தோல்வியுற்றால் மீண்டும் முயற்சிக்கவும். \nகுறியாக்க கோரிக்கையை முடக்கு."
+      "connectInfo": "**/connect {{host}}/vm/{{userCode}}/mc** இலிருந்து உங்கள் Minecraft ஐ இணைக்கவும். \nஇணைப்பு தோல்வியுற்றால் மீண்டும் முயற்சிக்கவும். \nகுறியாக்க கோரிக்கையை முடக்கு.",
+      "noConnection": "Minecraft இணைக்கப்படவில்லை."
     }
   },
   "generic": {
-    "connected": "இணைக்கப்பட்டது"
+    "connected": "இணைக்கப்பட்டது",
+    "audio": "ஆடியோ",
+    "open": "திற",
+    "text": "உரை",
+    "websocketNotConnected": "Websocket இணைக்கப்படவில்லை"
   },
   "logbuffer": {
     "tooManyLogs": "பல செய்திகள். \nபழைய பதிவுகள் அகற்றப்பட்டன."
@@ -70,7 +148,26 @@
     "password": "கடவுச்சொல்",
     "title": "உள்நுழைக",
     "username": "பயனர் பெயர்",
-    "welcome": "தொடர உள்நுழைக"
+    "welcome": "தொடர உள்நுழைக",
+    "confirmPassword": "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
+    "continueAsGuest": "விருந்தினராக தொடரவும்",
+    "createAccount": "கணக்கை உருவாக்கவும்",
+    "createAccountDescription": "உங்கள் தரவைச் சேமிக்க கணக்கை உருவாக்கவும்.",
+    "deleteAccount": "கணக்கை நீக்கு",
+    "displayName": "காட்சி பெயர்",
+    "displayNameDescription": "இது உங்கள் காட்சி பெயர்.",
+    "edit": "கணக்கைத் திருத்தவும்",
+    "editDescription": "உங்கள் தகவலை திருத்தவும்.",
+    "editTitle": "கணக்கைத் திருத்தவும்",
+    "email": "மின்னஞ்சல்",
+    "guest": "விருந்தினர் பயனர்",
+    "image": "படம்",
+    "newPassword": "புதிய கடவுச்சொல்",
+    "oldPassword": "பழைய கடவுச்சொல்",
+    "signout": "வெளியேறு",
+    "update": "புதுப்பிக்கவும்",
+    "userName": "பயனர் பெயர்",
+    "userNameDescription": "இது உள்நுழைவுக்கான உங்கள் பயனர் பெயர்."
   },
   "navbar": {
     "connected": "இணைக்கப்பட்டுள்ளது",
@@ -112,7 +209,11 @@
     "serverOnline": "ஆன்லைன்",
     "sessionNotFoundMsg": "அமர்வு கிடைக்கவில்லை. \nதொடங்குவதற்கு மற்றொரு குறியீட்டை உள்ளிடவும் அல்லது புதிய அமர்வை உருவாக்கவும்.",
     "typecodeMsg": "உங்கள் குறியீட்டை உள்ளிடவும் அல்லது தொடங்குவதற்கு புதிய அறையை உருவாக்கவும்.",
-    "welcome": "AI உடன் குறியீட்டு முறையைப் படிக்கவும்"
+    "welcome": "AI உடன் குறியீட்டு முறையைப் படிக்கவும்",
+    "deleteStorage": "எல்லா சேமிப்பகத்தையும் நீக்கு",
+    "failedCreate": "அமர்வை உருவாக்க முடியவில்லை",
+    "installPWA": "PWA ஐ நிறுவவும்",
+    "savedSessionDescription": "நீங்கள் தொடரக்கூடிய அமர்வுகளின் பட்டியல்"
   },
   "sidebar": {
     "dashboard": "டாஷ்போர்டு",
@@ -136,7 +237,10 @@
     "replying": "பதிலளிக்கிறது...",
     "server": "சேவையகம்",
     "showingLatest": "சமீபத்திய {{count}} செய்திகளைக் காட்டுகிறது",
-    "you": "நீங்கள்"
+    "you": "நீங்கள்",
+    "audioMode": "ஆடியோ பயன்முறை",
+    "transcribing": "படியெடுத்தல்...",
+    "transcriptionFailed": "டிரான்ஸ்கிரிப்ஷன் கிடைக்கவில்லை"
   },
   "tour": {
     "blocklyWorkspace": "பணியிடம் என்பது உங்கள் குறியீட்டை உருவாக்கும் இடம்.",
@@ -149,7 +253,8 @@
     "tabs": "அரட்டை மற்றும் பணியிடத்திற்கு இடையில் செல்ல நீங்கள் தாவல்களை மாற்றலாம்.",
     "tourAgain": "இந்தப் பட்டனைக் கிளிக் செய்வதன் மூலம் மீண்டும் இந்தச் சுற்றுலாவை மேற்கொள்ளலாம்.",
     "tutorialSelector": "நீங்கள் செய்ய விரும்பும் எந்த பயிற்சியையும் நீங்கள் தேர்ந்தெடுக்கலாம்.",
-    "welcome": "கப்பலில் வரவேற்கிறோம்! \nஇந்தப் பயன்பாட்டை எப்படிப் பயன்படுத்துவது என்பது பற்றிய சுருக்கமான கண்ணோட்டத்தை இந்தப் பயணம் வழங்குகிறது."
+    "welcome": "கப்பலில் வரவேற்கிறோம்! \nஇந்தப் பயன்பாட்டை எப்படிப் பயன்படுத்துவது என்பது பற்றிய சுருக்கமான கண்ணோட்டத்தை இந்தப் பயணம் வழங்குகிறது.",
+    "switchMode": "நீங்கள் இங்கிருந்து அமைப்புகளை மாற்றலாம்"
   },
   "tutorial": {
     "description": "நீங்கள் கற்றுக்கொள்ள விரும்புவதைத் தேர்ந்தெடுக்கவும்",
@@ -160,11 +265,49 @@
     "startTour": "உங்களால் என்ன செய்ய முடியும் என்று பாருங்கள்.",
     "startTutorial": "டுடோரியல் தேர்ந்தெடுக்கப்பட்டது",
     "title": "டுடோரியலைத் தேர்ந்தெடுக்கவும்",
-    "tour": "பயணத்தைத் தொடங்கு"
+    "tour": "பயணத்தைத் தொடங்கு",
+    "otherLanguage": "பிற மொழி மூலம் பயிற்சி",
+    "otherLanguageDescription": "இந்த பயிற்சிகள் வழங்குவதற்காக மொழிபெயர்க்கப்பட்டதால், துல்லியமாக இருக்கலாம்.",
+    "responseMode": "பதில் முறை",
+    "responseModeChanged": "மறுமொழி முறை {{mode}}க்கு மாற்றப்பட்டுள்ளது.",
+    "responseModeDescription": "விருப்பமான மறுமொழி பயன்முறையை ஆடியோ அல்லது உரையாக மாற்றவும்",
+    "yourLanguage": "உங்கள் மொழிக்கான பயிற்சி"
   },
   "vm": {
     "outOfMemory": "இயந்திரம் நினைவக வரம்பை அடைந்தது",
     "updatedScriptError": "புதுப்பிக்கப்பட்ட ஸ்கிரிப்டை இயக்குவதில் பிழை: {{error}}",
     "updatedScriptSuccess": "புதுப்பிக்கப்பட்ட ஸ்கிரிப்ட் வெற்றிகரமாக செயல்படுத்தப்பட்டது."
+  },
+  "general": {
+    "audio": "ஆடியோ",
+    "back": "மீண்டும்",
+    "connected": "இணைக்கப்பட்டது",
+    "delete": "நீக்கு",
+    "download": "பதிவிறக்கவும்",
+    "edit": "திருத்தவும்",
+    "open": "திற",
+    "save": "சேமிக்கவும்",
+    "text": "உரை",
+    "upload": "பதிவேற்றவும்",
+    "websocketNotConnected": "Websocket இணைக்கப்படவில்லை"
+  },
+  "toast": {
+    "createdTutorial": "பயிற்சி உருவாக்கப்பட்டது",
+    "deletedTutorial": "பயிற்சி நீக்கப்பட்டது",
+    "deletedUser": "பயனர் நீக்கப்பட்டார்",
+    "failedToCreateTutorial": "பயிற்சியை உருவாக்க முடியவில்லை",
+    "failedToDeleteTutorial": "பயிற்சியை நீக்க முடியவில்லை",
+    "failedToDeleteUser": "பயனரை நீக்க முடியவில்லை",
+    "failedToUpdateInfo": "பயனர் தகவலைப் புதுப்பிக்க முடியவில்லை.",
+    "failedToUpdatePassword": "கடவுச்சொல்லை புதுப்பிக்க முடியவில்லை.",
+    "failedToUpdateRole": "பாத்திரத்தைப் புதுப்பிக்க முடியவில்லை",
+    "failedToUpdateTutorial": "பயிற்சியைப் புதுப்பிக்க முடியவில்லை",
+    "failedToUpdateUser": "பயனரைப் புதுப்பிக்க முடியவில்லை",
+    "updatedInfo": "பயனர் தகவல் புதுப்பிக்கப்பட்டது.",
+    "updatedPassword": "கடவுச்சொல் புதுப்பிக்கப்பட்டது.",
+    "updatedRole": "பங்கு புதுப்பிக்கப்பட்டது",
+    "updatedTutorial": "மேம்படுத்தப்பட்ட பயிற்சி",
+    "updatedUser": "பயனர் விவரம் புதுப்பிக்கப்பட்டது",
+    "uploadedTutorial": "டுடோரியல் பதிவேற்றப்பட்டது"
   }
 }
