--- a/apps/frontend/src/i18n/te.json
+++ b/apps/frontend/src/i18n/te.json
@@ -22,7 +22,8 @@
     "Sentry_DSN": "సెంట్రీ DSN(డిజేబుల్ చేయడానికి ఖాళీగా ఉంచండి)",
     "replaysOnErrorSampleRate": "ఎర్రర్‌పై రీప్లేల కోసం నమూనా రేటు",
     "replaysSessionSampleRate": "సెషన్‌లో రీప్లేల కోసం నమూనా రేటు",
-    "tracesSampleRate": "జాడల కోసం నమూనా రేటు"
+    "tracesSampleRate": "జాడల కోసం నమూనా రేటు",
+    "Chat_Audio": "చాట్ ఆడియో విధానం"
   },
   "admin": {
     "loading": "లోడ్ అవుతోంది",
@@ -34,7 +35,79 @@
     "sessionSummary": "సెషన్ సారాంశం",
     "showHeatmap": "హీట్‌మ్యాప్‌ని చూపించు",
     "summary": "సారాంశం",
-    "workspace": "కార్యస్థలం"
+    "workspace": "కార్యస్థలం",
+    "actions": "చర్యలు",
+    "addNode": "నోడ్ జోడించండి",
+    "admin": "అడ్మిన్",
+    "advanced": "అధునాతనమైనది",
+    "autoUpdate": "స్వయంచాలక నవీకరణ",
+    "basic": "ప్రాథమిక",
+    "content": "కంటెంట్",
+    "createExample": "ఉదాహరణ కోడ్‌ని సృష్టించండి",
+    "createTutorial": "కొత్త ట్యుటోరియల్‌ని సృష్టించండి",
+    "createUser": "కొత్త వినియోగదారుని సృష్టించండి",
+    "createdTime": "సృష్టించిన సమయం",
+    "currentNumOfBlocks": "బ్లాక్‌ల ప్రస్తుత సంఖ్య",
+    "dashboard": "అడ్మిన్ డాష్‌బోర్డ్",
+    "deleteSession": "తొలగించు",
+    "downloadAll": "అన్ని సెషన్‌లను డౌన్‌లోడ్ చేయండి",
+    "downloading": "డౌన్‌లోడ్ చేస్తోంది",
+    "edit": "సవరించు",
+    "email": "ఇమెయిల్",
+    "example": "ఉదాహరణ కోడ్",
+    "generateContent": "ఇప్పటికే ఉన్న కంటెంట్ నుండి కొత్త కంటెంట్‌ను రూపొందించండి",
+    "generateMarkdown": "మార్క్‌డౌన్‌ను రూపొందించండి",
+    "generateMetadata": "కంటెంట్ నుండి మెటాడేటాను రూపొందించండి",
+    "generatedMd": "మార్క్‌డౌన్ రూపొందించబడింది",
+    "generatedMdComparison": "పోలిక",
+    "generatedMetaData": "మెటాడేటా రూపొందించబడింది",
+    "generatingMarkdown": "ఉత్పత్తి చేస్తోంది...",
+    "lastUpdatedTime": "చివరిగా నవీకరించబడిన సమయం",
+    "metadata": "మెటాడేటా",
+    "metadataGenerator": "మెటాడేటా జనరేటర్",
+    "noDate": "తేదీ లేదు",
+    "noEmail": "ఇమెయిల్ లేదు",
+    "noName": "పేరు లేదు",
+    "noUsername": "వినియోగదారు పేరు లేదు",
+    "notSelected": "ఎంపిక కాలేదు",
+    "originalMd": "అసలు మార్క్‌డౌన్",
+    "originalMetaData": "అసలు మెటాడేటా",
+    "password": "పాస్వర్డ్",
+    "refineContent": "కంటెంట్‌ను మెరుగుపరచండి",
+    "refineMetadata": "మెటాడేటాను మెరుగుపరచండి",
+    "role": "పాత్ర",
+    "selectedTutorial": "ఎంచుకున్న ట్యుటోరియల్",
+    "sessionAnalyticsDialog": "సెషన్ అనలిటిక్స్ డైలాగ్",
+    "sessionId": "సెషన్ ఐడి",
+    "sessionNotFound": "సెషన్ కనుగొనబడలేదు",
+    "sessions": "సెషన్స్",
+    "sessionsDescription": "వినియోగదారుల సెషన్‌ను పర్యవేక్షించండి",
+    "sessionsForUser": "వినియోగదారు {{user}} కోసం సెషన్‌లు",
+    "settings": "సెట్టింగ్‌లు",
+    "stats": "గణాంకాలు",
+    "title": "అడ్మిన్",
+    "totalCodeExecutions": "కోడ్ అమలు మొత్తం సంఖ్య",
+    "totalConnectingTime": "మొత్తం కనెక్ట్ సమయం",
+    "totalInvokedLLM": "మొత్తం LLMని అమలు చేసారు",
+    "totalUserMessages": "వినియోగదారు సందేశం యొక్క మొత్తం సంఖ్య",
+    "training": "AI శిక్షణ",
+    "trainingDescription": "శిక్షణ AI ట్యూటర్",
+    "tutorialDescription": "ట్యుటోరియల్ వివరణ",
+    "tutorialId": "ట్యుటోరియల్ ఐడి",
+    "tutorialLanguage": "భాష",
+    "tutorialSelectCount": "గణనను ఎంచుకోండి",
+    "tutorialTags": "ట్యాగ్‌లు",
+    "tutorialTitle": "ట్యుటోరియల్ శీర్షిక",
+    "tutorials": "ట్యుటోరియల్స్",
+    "tutorialsDescription": "సృష్టించిన ట్యుటోరియల్‌లను తనిఖీ చేయండి",
+    "uploader": "అప్‌లోడర్",
+    "uploaderDescription": "ట్యుటోరియల్‌ని అప్‌లోడ్ చేయండి",
+    "user": "వినియోగదారు",
+    "username": "వినియోగదారు పేరు",
+    "welcome": "TutoriaLLMకి స్వాగతం",
+    "workspacePreview": "కార్యస్థల ప్రివ్యూ",
+    "writeContent": "మీ కంటెంట్‌ను ఇక్కడ వ్రాయండి",
+    "writeMetadata": "మీ మెటాడేటాను ఇక్కడ వ్రాయండి"
   },
   "dialogue": {
     "Introduction": "హాయ్! \nఏమి చేయాలో ఎంచుకోవడానికి మీ ప్రశ్నలలో టైప్ యొక్క శీఘ్ర ప్రత్యుత్తరం బటన్‌ను క్లిక్ చేయండి!",
@@ -55,11 +128,16 @@
   },
   "extension": {
     "minecraft-core": {
-      "connectInfo": "మీ Minecraft ను **/connect {{host}}/vm/{{userCode}}/mc** నుండి కనెక్ట్ చేయండి. \nకనెక్షన్ విఫలమైతే మళ్లీ ప్రయత్నించండి. \nఎన్క్రిప్షన్ అభ్యర్థనను ఆఫ్ చేయండి."
+      "connectInfo": "మీ Minecraft ను **/connect {{host}}/vm/{{userCode}}/mc** నుండి కనెక్ట్ చేయండి. \nకనెక్షన్ విఫలమైతే మళ్లీ ప్రయత్నించండి. \nఎన్క్రిప్షన్ అభ్యర్థనను ఆఫ్ చేయండి.",
+      "noConnection": "Minecraft కనెక్ట్ చేయబడలేదు."
     }
   },
   "generic": {
-    "connected": "కనెక్ట్ చేయబడింది"
+    "connected": "కనెక్ట్ చేయబడింది",
+    "audio": "ఆడియో",
+    "open": "తెరవండి",
+    "text": "వచనం",
+    "websocketNotConnected": "వెబ్‌సాకెట్ కనెక్ట్ చేయబడలేదు"
   },
   "logbuffer": {
     "tooManyLogs": "చాలా సందేశాలు. \nపాత లాగ్‌లు తొలగించబడ్డాయి."
@@ -70,7 +148,26 @@
     "password": "పాస్వర్డ్",
     "title": "లాగిన్ చేయండి",
     "username": "వినియోగదారు పేరు",
-    "welcome": "కొనసాగించడానికి లాగిన్ చేయండి"
+    "welcome": "కొనసాగించడానికి లాగిన్ చేయండి",
+    "confirmPassword": "పాస్వర్డ్ను నిర్ధారించండి",
+    "continueAsGuest": "అతిథిగా కొనసాగండి",
+    "createAccount": "ఖాతాను సృష్టించండి",
+    "createAccountDescription": "మీ డేటాను సేవ్ చేయడానికి ఖాతాను సృష్టించండి.",
+    "deleteAccount": "ఖాతాను తొలగించండి",
+    "displayName": "ప్రదర్శన పేరు",
+    "displayNameDescription": "ఇది మీ ప్రదర్శన పేరు.",
+    "edit": "ఖాతాను సవరించండి",
+    "editDescription": "మీ సమాచారాన్ని సవరించండి.",
+    "editTitle": "ఖాతాను సవరించండి",
+    "email": "ఇమెయిల్",
+    "guest": "అతిథి వినియోగదారు",
+    "image": "చిత్రం",
+    "newPassword": "కొత్త పాస్‌వర్డ్",
+    "oldPassword": "పాత పాస్వర్డ్",
+    "signout": "సైన్ అవుట్",
+    "update": "నవీకరించు",
+    "userName": "వినియోగదారు పేరు",
+    "userNameDescription": "ఇది లాగిన్ కోసం మీ వినియోగదారు పేరు."
   },
   "navbar": {
     "connected": "కనెక్ట్ చేయబడింది",
@@ -112,7 +209,11 @@
     "serverOnline": "ఆన్‌లైన్",
     "sessionNotFoundMsg": "సెషన్ కనుగొనబడలేదు. \nప్రారంభించడానికి మరొక కోడ్‌ని టైప్ చేయండి లేదా కొత్త సెషన్‌ను సృష్టించండి.",
     "typecodeMsg": "మీ కోడ్‌ని టైప్ చేయండి లేదా ప్రారంభించడానికి కొత్త గదిని సృష్టించండి.",
-    "welcome": "AIతో కోడింగ్‌ని అధ్యయనం చేయండి"
+    "welcome": "AIతో కోడింగ్‌ని అధ్యయనం చేయండి",
+    "deleteStorage": "మొత్తం నిల్వను తొలగించండి",
+    "failedCreate": "సెషన్‌ని సృష్టించడం విఫలమైంది",
+    "installPWA": "PWAని ఇన్‌స్టాల్ చేయండి",
+    "savedSessionDescription": "మీరు కొనసాగించగల సెషన్‌ల జాబితా"
   },
   "sidebar": {
     "dashboard": "డాష్‌బోర్డ్",
@@ -136,7 +237,10 @@
     "replying": "ప్రత్యుత్తరం ఇస్తోంది...",
     "server": "సర్వర్",
     "showingLatest": "తాజా {{count}} సందేశాలను చూపుతోంది",
-    "you": "మీరు"
+    "you": "మీరు",
+    "audioMode": "ఆడియో మోడ్",
+    "transcribing": "లిప్యంతరీకరణ...",
+    "transcriptionFailed": "లిప్యంతరీకరణ అందుబాటులో లేదు"
   },
   "tour": {
     "blocklyWorkspace": "వర్క్‌స్పేస్ అనేది మీ కోడ్‌ని రూపొందించే ప్రదేశం.",
@@ -149,7 +253,8 @@
     "tabs": "చాట్ మరియు వర్క్‌స్పేస్ మధ్య తరలించడానికి మీరు ట్యాబ్‌లను మార్చవచ్చు.",
     "tourAgain": "మీరు ఈ బటన్‌ని క్లిక్ చేయడంతో మళ్లీ ఈ పర్యటనలో పాల్గొనవచ్చు.",
     "tutorialSelector": "మీరు చేయాలనుకుంటున్న ఏదైనా ట్యుటోరియల్‌ని మీరు ఎంచుకోవచ్చు.",
-    "welcome": "బోర్డులో స్వాగతం! \nఈ పర్యటన ఈ అనువర్తనాన్ని ఎలా ఉపయోగించాలో సంక్షిప్త అవలోకనాన్ని అందిస్తుంది."
+    "welcome": "బోర్డులో స్వాగతం! \nఈ పర్యటన ఈ అనువర్తనాన్ని ఎలా ఉపయోగించాలో సంక్షిప్త అవలోకనాన్ని అందిస్తుంది.",
+    "switchMode": "మీరు ఇక్కడ నుండి సెట్టింగ్‌లను మార్చవచ్చు"
   },
   "tutorial": {
     "description": "మీరు ఏమి నేర్చుకోవాలనుకుంటున్నారో ఎంచుకోండి",
@@ -160,11 +265,49 @@
     "startTour": "మీరు ఏమి చేయగలరో చూడండి.",
     "startTutorial": "ట్యుటోరియల్ ఎంపిక చేయబడింది",
     "title": "ట్యుటోరియల్ ఎంచుకోండి",
-    "tour": "పర్యటన ప్రారంభించండి"
+    "tour": "పర్యటన ప్రారంభించండి",
+    "otherLanguage": "ఇతర భాష ద్వారా ట్యుటోరియల్",
+    "otherLanguageDescription": "అందించడానికి ఈ ట్యుటోరియల్‌లు అనువదించబడుతున్నందున, సరికాకపోవచ్చు.",
+    "responseMode": "ప్రతిస్పందన మోడ్",
+    "responseModeChanged": "ప్రతిస్పందన మోడ్ {{mode}}కి మార్చబడింది.",
+    "responseModeDescription": "ప్రాధాన్య ప్రతిస్పందన మోడ్‌ని ఆడియో లేదా టెక్స్ట్‌గా మార్చండి",
+    "yourLanguage": "మీ భాష కోసం ట్యుటోరియల్"
   },
   "vm": {
     "outOfMemory": "మెషిన్ మెమరీ పరిమితిని చేరుకుంది",
     "updatedScriptError": "నవీకరించబడిన స్క్రిప్ట్‌ని అమలు చేయడంలో లోపం: {{error}}",
     "updatedScriptSuccess": "నవీకరించబడిన స్క్రిప్ట్ విజయవంతంగా అమలు చేయబడింది."
+  },
+  "general": {
+    "audio": "ఆడియో",
+    "back": "వెనుకకు",
+    "connected": "కనెక్ట్ చేయబడింది",
+    "delete": "తొలగించు",
+    "download": "డౌన్‌లోడ్ చేయండి",
+    "edit": "సవరించు",
+    "open": "తెరవండి",
+    "save": "సేవ్ చేయండి",
+    "text": "వచనం",
+    "upload": "అప్‌లోడ్ చేయండి",
+    "websocketNotConnected": "వెబ్‌సాకెట్ కనెక్ట్ చేయబడలేదు"
+  },
+  "toast": {
+    "createdTutorial": "ట్యుటోరియల్ సృష్టించబడింది",
+    "deletedTutorial": "ట్యుటోరియల్ తొలగించబడింది",
+    "deletedUser": "వినియోగదారు తొలగించబడ్డారు",
+    "failedToCreateTutorial": "ట్యుటోరియల్‌ని రూపొందించడంలో విఫలమైంది",
+    "failedToDeleteTutorial": "ట్యుటోరియల్‌ని తొలగించడంలో విఫలమైంది",
+    "failedToDeleteUser": "వినియోగదారుని తొలగించడంలో విఫలమైంది",
+    "failedToUpdateInfo": "వినియోగదారు సమాచారాన్ని నవీకరించడంలో విఫలమైంది.",
+    "failedToUpdatePassword": "పాస్‌వర్డ్‌ని నవీకరించడంలో విఫలమైంది.",
+    "failedToUpdateRole": "పాత్రను నవీకరించడంలో విఫలమైంది",
+    "failedToUpdateTutorial": "ట్యుటోరియల్‌ని నవీకరించడంలో విఫలమైంది",
+    "failedToUpdateUser": "వినియోగదారుని నవీకరించడంలో విఫలమైంది",
+    "updatedInfo": "వినియోగదారు సమాచారం నవీకరించబడింది.",
+    "updatedPassword": "పాస్‌వర్డ్ నవీకరించబడింది.",
+    "updatedRole": "పాత్ర నవీకరించబడింది",
+    "updatedTutorial": "ట్యుటోరియల్ నవీకరించబడింది",
+    "updatedUser": "వినియోగదారు వివరాలు నవీకరించబడ్డాయి",
+    "uploadedTutorial": "ట్యుటోరియల్ అప్‌లోడ్ చేయబడింది"
   }
 }
