--- a/apps/frontend/src/i18n/es.json
+++ b/apps/frontend/src/i18n/es.json
@@ -22,7 +22,8 @@
     "Sentry_DSN": "Sentry DSN (dejar vacío para desactivar)",
     "replaysOnErrorSampleRate": "Frecuencia de muestreo para repeticiones en caso de error",
     "replaysSessionSampleRate": "Frecuencia de muestreo para repeticiones en la sesión",
-    "tracesSampleRate": "Frecuencia de muestreo para trazas"
+    "tracesSampleRate": "Frecuencia de muestreo para trazas",
+    "Chat_Audio": "Modalidad de chat de audio"
   },
   "admin": {
     "loading": "Cargando",
@@ -34,7 +35,79 @@
     "sessionSummary": "Resumen de la sesión",
     "showHeatmap": "Mostrar mapa de calor",
     "summary": "Resumen",
-    "workspace": "Espacio de trabajo"
+    "workspace": "Espacio de trabajo",
+    "actions": "Comportamiento",
+    "addNode": "Agregar nodo",
+    "admin": "Administración",
+    "advanced": "Avanzado",
+    "autoUpdate": "Actualización automática",
+    "basic": "Básico",
+    "content": "Contenido",
+    "createExample": "Crear código de ejemplo",
+    "createTutorial": "Crear nuevo tutorial",
+    "createUser": "Crear nuevo usuario",
+    "createdTime": "Hora de creación",
+    "currentNumOfBlocks": "Número actual de bloques",
+    "dashboard": "Panel de administración",
+    "deleteSession": "Borrar",
+    "downloadAll": "Descargar todas las sesiones",
+    "downloading": "Descargando",
+    "edit": "Editar",
+    "email": "Correo electrónico",
+    "example": "Código de ejemplo",
+    "generateContent": "Generar nuevo contenido a partir de contenido existente",
+    "generateMarkdown": "Generar rebajas",
+    "generateMetadata": "Generar metadatos a partir del contenido",
+    "generatedMd": "Rebaja generada",
+    "generatedMdComparison": "Comparación",
+    "generatedMetaData": "Metadatos generados",
+    "generatingMarkdown": "Generando...",
+    "lastUpdatedTime": "Hora de la última actualización",
+    "metadata": "Metadatos",
+    "metadataGenerator": "Generador de metadatos",
+    "noDate": "sin fecha",
+    "noEmail": "Sin correo electrónico",
+    "noName": "Sin nombre",
+    "noUsername": "Sin nombre de usuario",
+    "notSelected": "no seleccionado",
+    "originalMd": "Rebaja original",
+    "originalMetaData": "Metadatos originales",
+    "password": "Contraseña",
+    "refineContent": "Refinar contenido",
+    "refineMetadata": "Refinar metadatos",
+    "role": "Role",
+    "selectedTutorial": "tutorial seleccionado",
+    "sessionAnalyticsDialog": "Diálogo de análisis de sesión",
+    "sessionId": "ID de sesión",
+    "sessionNotFound": "Sesión no encontrada",
+    "sessions": "Sesiones",
+    "sessionsDescription": "Monitorear la sesión de los usuarios",
+    "sessionsForUser": "Sesiones para el usuario {{user}}",
+    "settings": "Ajustes",
+    "stats": "Estadísticas",
+    "title": "Administración",
+    "totalCodeExecutions": "Número total de ejecución de código",
+    "totalConnectingTime": "Tiempo total de conexión",
+    "totalInvokedLLM": "Total LLM invocado",
+    "totalUserMessages": "Número total de mensajes de usuario",
+    "training": "entrenamiento de IA",
+    "trainingDescription": "Entrenar tutor de IA",
+    "tutorialDescription": "descripción del tutorial",
+    "tutorialId": "ID del tutorial",
+    "tutorialLanguage": "Idioma",
+    "tutorialSelectCount": "Seleccionar recuento",
+    "tutorialTags": "Etiquetas",
+    "tutorialTitle": "Título del tutorial",
+    "tutorials": "Tutoriales",
+    "tutorialsDescription": "Consulta los tutoriales creados.",
+    "uploader": "Cargador",
+    "uploaderDescription": "Subir tutorial",
+    "user": "Usuario",
+    "username": "Nombre de usuario",
+    "welcome": "Bienvenido a TutorialLLM",
+    "workspacePreview": "Vista previa del espacio de trabajo",
+    "writeContent": "Escribe tu contenido aquí",
+    "writeMetadata": "Escribe tus metadatos aquí"
   },
   "dialogue": {
     "Introduction": "¡Hola! \nHaga clic en el botón de respuesta rápida de tipo en sus preguntas para elegir qué hacer.",
@@ -55,11 +128,16 @@
   },
   "extension": {
     "minecraft-core": {
-      "connectInfo": "Conecte su Minecraft desde **/connect {{host}}/vm/{{userCode}}/mc**. \nInténtalo de nuevo si falla la conexión. \nDesactive la solicitud de cifrado."
+      "connectInfo": "Conecte su Minecraft desde **/connect {{host}}/vm/{{userCode}}/mc**. \nInténtalo de nuevo si falla la conexión. \nDesactive la solicitud de cifrado.",
+      "noConnection": "Minecraft no está conectado."
     }
   },
   "generic": {
-    "connected": "Conectado"
+    "connected": "Conectado",
+    "audio": "Audio",
+    "open": "Abierto",
+    "text": "Texto",
+    "websocketNotConnected": "Websocket no está conectado"
   },
   "logbuffer": {
     "tooManyLogs": "Demasiados mensajes. \nSe eliminaron los registros antiguos."
@@ -70,7 +148,26 @@
     "password": "Contraseña",
     "title": "Acceso",
     "username": "Nombre de usuario",
-    "welcome": "Inicia sesión para continuar"
+    "welcome": "Inicia sesión para continuar",
+    "confirmPassword": "Confirmar Contraseña",
+    "continueAsGuest": "Continuar como invitado",
+    "createAccount": "Crear una cuenta",
+    "createAccountDescription": "Crea una cuenta para guardar tus datos.",
+    "deleteAccount": "Eliminar cuenta",
+    "displayName": "Nombre para mostrar",
+    "displayNameDescription": "Este es su nombre para mostrar.",
+    "edit": "Editar cuenta",
+    "editDescription": "Edita tu información.",
+    "editTitle": "Editar cuenta",
+    "email": "Correo electrónico",
+    "guest": "Usuario invitado",
+    "image": "Imagen",
+    "newPassword": "Nueva contraseña",
+    "oldPassword": "Contraseña anterior",
+    "signout": "desconectar",
+    "update": "Actualizar",
+    "userName": "Nombre de usuario",
+    "userNameDescription": "Este es su nombre de usuario para iniciar sesión."
   },
   "navbar": {
     "connected": "conectado",
@@ -112,7 +209,11 @@
     "serverOnline": "En línea",
     "sessionNotFoundMsg": "Sesión no encontrada. \nEscriba otro código o cree una nueva sesión para comenzar.",
     "typecodeMsg": "Escriba su código o cree una nueva sala para comenzar.",
-    "welcome": "Estudiar codificación con IA"
+    "welcome": "Estudiar codificación con IA",
+    "deleteStorage": "Eliminar todo el almacenamiento",
+    "failedCreate": "No se pudo crear la sesión",
+    "installPWA": "Instalar PWA",
+    "savedSessionDescription": "Lista de sesiones que puedes continuar"
   },
   "sidebar": {
     "dashboard": "Panel",
@@ -136,7 +237,10 @@
     "replying": "Respondiendo...",
     "server": "Servidor",
     "showingLatest": "Mostrando los últimos {{count}} mensajes",
-    "you": "Tú"
+    "you": "Tú",
+    "audioMode": "Modo de audio",
+    "transcribing": "transcribiendo...",
+    "transcriptionFailed": "La transcripción no está disponible"
   },
   "tour": {
     "blocklyWorkspace": "El espacio de trabajo es el lugar para crear su código.",
@@ -149,7 +253,8 @@
     "tabs": "Puede cambiar las pestañas para moverse entre el chat y el espacio de trabajo.",
     "tourAgain": "Puede realizar este recorrido nuevamente haciendo clic en este botón.",
     "tutorialSelector": "Puedes seleccionar cualquier tutorial que quieras hacer.",
-    "welcome": "¡Bienvenido a bordo! \nEste recorrido proporciona una breve descripción general de cómo utilizar esta aplicación."
+    "welcome": "¡Bienvenido a bordo! \nEste recorrido proporciona una breve descripción general de cómo utilizar esta aplicación.",
+    "switchMode": "Puedes cambiar la configuración desde aquí"
   },
   "tutorial": {
     "description": "Elige lo que quieres aprender",
@@ -160,11 +265,49 @@
     "startTour": "Mira lo que puedes hacer.",
     "startTutorial": "El tutorial ha seleccionado",
     "title": "Elegir tutorial",
-    "tour": "Iniciar recorrido"
+    "tour": "Iniciar recorrido",
+    "otherLanguage": "Tutorial por otro idioma",
+    "otherLanguageDescription": "Como se traducen estos tutoriales, puede ser inexacto.",
+    "responseMode": "Modo de respuesta",
+    "responseModeChanged": "El modo de respuesta ha cambiado a {{mode}}.",
+    "responseModeDescription": "Cambie el modo de respuesta preferido a audio o texto",
+    "yourLanguage": "Tutorial para tu idioma"
   },
   "vm": {
     "outOfMemory": "La máquina alcanzó el límite de memoria",
     "updatedScriptError": "Error al ejecutar el script actualizado: {{error}}",
     "updatedScriptSuccess": "El script actualizado se ejecutó correctamente."
+  },
+  "general": {
+    "audio": "Audio",
+    "back": "Atrás",
+    "connected": "Conectado",
+    "delete": "Borrar",
+    "download": "Descargar",
+    "edit": "Editar",
+    "open": "Abierto",
+    "save": "Ahorrar",
+    "text": "Texto",
+    "upload": "Subir",
+    "websocketNotConnected": "Websocket no está conectado"
+  },
+  "toast": {
+    "createdTutorial": "Tutorial creado",
+    "deletedTutorial": "Tutorial eliminado",
+    "deletedUser": "Usuario eliminado",
+    "failedToCreateTutorial": "No se pudo crear el tutorial",
+    "failedToDeleteTutorial": "No se pudo eliminar el tutorial",
+    "failedToDeleteUser": "No se pudo eliminar el usuario",
+    "failedToUpdateInfo": "No se pudo actualizar la información del usuario.",
+    "failedToUpdatePassword": "No se pudo actualizar la contraseña.",
+    "failedToUpdateRole": "No se pudo actualizar el rol",
+    "failedToUpdateTutorial": "No se pudo actualizar el tutorial",
+    "failedToUpdateUser": "No se pudo actualizar el usuario",
+    "updatedInfo": "Información del usuario actualizada.",
+    "updatedPassword": "Contraseña actualizada.",
+    "updatedRole": "Rol actualizado",
+    "updatedTutorial": "Tutorial actualizado",
+    "updatedUser": "Detalles de usuario actualizados",
+    "uploadedTutorial": "Tutorial subido"
   }
 }
