--- a/apps/frontend/src/i18n/ru.json
+++ b/apps/frontend/src/i18n/ru.json
@@ -22,7 +22,8 @@
     "Sentry_DSN": "Sentry DSN (оставьте пустым, чтобы отключить)",
     "replaysOnErrorSampleRate": "Частота выборки для повторов при ошибке",
     "replaysSessionSampleRate": "Частота дискретизации для повторов сеанса",
-    "tracesSampleRate": "Частота выборки для трассировок"
+    "tracesSampleRate": "Частота выборки для трассировок",
+    "Chat_Audio": "Аудио модальность чата"
   },
   "admin": {
     "loading": "Загрузка",
@@ -34,7 +35,79 @@
     "sessionSummary": "Итоги сессии",
     "showHeatmap": "Показать тепловую карту",
     "summary": "Краткое содержание",
-    "workspace": "Рабочая область"
+    "workspace": "Рабочая область",
+    "actions": "Действия",
+    "addNode": "Добавить узел",
+    "admin": "Админ",
+    "advanced": "Передовой",
+    "autoUpdate": "Автоматическое обновление",
+    "basic": "Базовый",
+    "content": "Содержание",
+    "createExample": "Создать пример кода",
+    "createTutorial": "Создать новый учебник",
+    "createUser": "Создать нового пользователя",
+    "createdTime": "Время создания",
+    "currentNumOfBlocks": "Текущее количество блоков",
+    "dashboard": "Панель администратора",
+    "deleteSession": "Удалить",
+    "downloadAll": "Скачать все сеансы",
+    "downloading": "Загрузка",
+    "edit": "Редактировать",
+    "email": "Электронная почта",
+    "example": "Пример кода",
+    "generateContent": "Генерируйте новый контент из существующего контента",
+    "generateMarkdown": "Создать уценку",
+    "generateMetadata": "Генерация метаданных из контента",
+    "generatedMd": "Сгенерированная уценка",
+    "generatedMdComparison": "Сравнение",
+    "generatedMetaData": "Сгенерированные метаданные",
+    "generatingMarkdown": "Создание...",
+    "lastUpdatedTime": "Время последнего обновления",
+    "metadata": "Метаданные",
+    "metadataGenerator": "Генератор метаданных",
+    "noDate": "Без даты",
+    "noEmail": "Нет электронной почты",
+    "noName": "Без имени",
+    "noUsername": "Нет имени пользователя",
+    "notSelected": "не выбран",
+    "originalMd": "Исходная скидка",
+    "originalMetaData": "Исходные метаданные",
+    "password": "Пароль",
+    "refineContent": "Уточнить контент",
+    "refineMetadata": "Уточнить метаданные",
+    "role": "Роль",
+    "selectedTutorial": "Выбранный учебник",
+    "sessionAnalyticsDialog": "Диалоговое окно аналитики сеанса",
+    "sessionId": "Идентификатор сеанса",
+    "sessionNotFound": "Сессия не найдена",
+    "sessions": "Сессии",
+    "sessionsDescription": "Мониторинг сеансов пользователей",
+    "sessionsForUser": "Сессии для пользователя {{user}}",
+    "settings": "Настройки",
+    "stats": "Статистика",
+    "title": "Админ",
+    "totalCodeExecutions": "Общее количество выполнения кода",
+    "totalConnectingTime": "Общее время соединения",
+    "totalInvokedLLM": "Всего вызвано LLM",
+    "totalUserMessages": "Общее количество сообщений пользователя",
+    "training": "Обучение искусственному интеллекту",
+    "trainingDescription": "Обучить репетитора по искусственному интеллекту",
+    "tutorialDescription": "Описание урока",
+    "tutorialId": "Идентификатор учебника",
+    "tutorialLanguage": "Язык",
+    "tutorialSelectCount": "Выберите количество",
+    "tutorialTags": "Теги",
+    "tutorialTitle": "Название урока",
+    "tutorials": "Учебники",
+    "tutorialsDescription": "Проверьте созданные руководства",
+    "uploader": "Загрузчик",
+    "uploaderDescription": "Загрузить руководство",
+    "user": "Пользователь",
+    "username": "Имя пользователя",
+    "welcome": "Добро пожаловать в TutoriaLLM",
+    "workspacePreview": "Предварительный просмотр рабочей области",
+    "writeContent": "Напишите здесь свой контент",
+    "writeMetadata": "Напишите здесь свои метаданные"
   },
   "dialogue": {
     "Introduction": "Привет! \nнажмите кнопку быстрого ответа и введите свои вопросы, чтобы выбрать, что делать!",
@@ -55,11 +128,16 @@
   },
   "extension": {
     "minecraft-core": {
-      "connectInfo": "Подключите свой Minecraft из **/connect {{host}}/vm/{{userCode}}/mc**. \nПопробуйте еще раз, если соединение не удалось. \nОтключите запрос на шифрование."
+      "connectInfo": "Подключите свой Minecraft из **/connect {{host}}/vm/{{userCode}}/mc**. \nПопробуйте еще раз, если соединение не удалось. \nОтключите запрос на шифрование.",
+      "noConnection": "Майнкрафт не подключен."
     }
   },
   "generic": {
-    "connected": "Подключено"
+    "connected": "Подключено",
+    "audio": "Аудио",
+    "open": "Открыть",
+    "text": "Текст",
+    "websocketNotConnected": "Вебсокет не подключен"
   },
   "logbuffer": {
     "tooManyLogs": "Слишком много сообщений. \nстарые логи удалены."
@@ -70,7 +148,26 @@
     "password": "Пароль",
     "title": "Авторизоваться",
     "username": "Имя пользователя",
-    "welcome": "Войдите, чтобы продолжить"
+    "welcome": "Войдите, чтобы продолжить",
+    "confirmPassword": "Подтвердите пароль",
+    "continueAsGuest": "Продолжить как гость",
+    "createAccount": "Зарегистрироваться",
+    "createAccountDescription": "Создайте учетную запись, чтобы сохранить ваши данные.",
+    "deleteAccount": "Удалить аккаунт",
+    "displayName": "Отображаемое имя",
+    "displayNameDescription": "Это ваше отображаемое имя.",
+    "edit": "Редактировать аккаунт",
+    "editDescription": "Отредактируйте свою информацию.",
+    "editTitle": "Редактировать аккаунт",
+    "email": "Электронная почта",
+    "guest": "Гость пользователь",
+    "image": "Изображение",
+    "newPassword": "Новый пароль",
+    "oldPassword": "Старый пароль",
+    "signout": "выход",
+    "update": "Обновлять",
+    "userName": "Имя пользователя",
+    "userNameDescription": "Это ваше имя пользователя для входа в систему."
   },
   "navbar": {
     "connected": "подключен",
@@ -112,7 +209,11 @@
     "serverOnline": "Онлайн",
     "sessionNotFoundMsg": "Сессия не найдена. \nВведите другой код или создайте новый сеанс, чтобы начать.",
     "typecodeMsg": "Введите свой код или создайте новую комнату, чтобы начать.",
-    "welcome": "Изучите программирование с помощью ИИ"
+    "welcome": "Изучите программирование с помощью ИИ",
+    "deleteStorage": "Удалить все хранилище",
+    "failedCreate": "Не удалось создать сеанс",
+    "installPWA": "Установить PWA",
+    "savedSessionDescription": "Список сессий, которые вы можете продолжить"
   },
   "sidebar": {
     "dashboard": "Панель управления",
@@ -136,7 +237,10 @@
     "replying": "Отвечаю...",
     "server": "Сервер",
     "showingLatest": "Показаны последние сообщения: {{count}}.",
-    "you": "Ты"
+    "you": "Ты",
+    "audioMode": "Аудио режим",
+    "transcribing": "расшифровка...",
+    "transcriptionFailed": "Транскрипция недоступна"
   },
   "tour": {
     "blocklyWorkspace": "Рабочая область — это место для написания вашего кода.",
@@ -149,7 +253,8 @@
     "tabs": "Вы можете переключать вкладки для перемещения между чатом и рабочей областью.",
     "tourAgain": "Вы можете пройти этот тур еще раз, нажав эту кнопку.",
     "tutorialSelector": "Вы можете выбрать любой учебник, который хотите создать.",
-    "welcome": "Добро пожаловать на борт! \nВ этом туре представлен краткий обзор того, как использовать это приложение."
+    "welcome": "Добро пожаловать на борт! \nВ этом туре представлен краткий обзор того, как использовать это приложение.",
+    "switchMode": "Вы можете изменить настройки отсюда"
   },
   "tutorial": {
     "description": "Выберите, чему вы хотите научиться",
@@ -160,11 +265,49 @@
     "startTour": "Посмотри, что ты можешь сделать.",
     "startTutorial": "Учебное пособие выбрано",
     "title": "Выбрать учебник",
-    "tour": "Начать тур"
+    "tour": "Начать тур",
+    "otherLanguage": "Учебник на другом языке",
+    "otherLanguageDescription": "Поскольку эти учебные пособия переводятся для предоставления, они могут быть неточными.",
+    "responseMode": "Режим ответа",
+    "responseModeChanged": "Режим ответа изменился на {{mode}}.",
+    "responseModeDescription": "Переключить предпочтительный режим ответа на аудио или текст",
+    "yourLanguage": "Учебник для вашего языка"
   },
   "vm": {
     "outOfMemory": "Машина достигла предела памяти",
     "updatedScriptError": "Ошибка выполнения обновленного скрипта: {{error}}",
     "updatedScriptSuccess": "Обновленный скрипт успешно выполнен."
+  },
+  "general": {
+    "audio": "Аудио",
+    "back": "Назад",
+    "connected": "Подключено",
+    "delete": "Удалить",
+    "download": "Скачать",
+    "edit": "Редактировать",
+    "open": "Открыть",
+    "save": "Сохранять",
+    "text": "Текст",
+    "upload": "Загрузить",
+    "websocketNotConnected": "Вебсокет не подключен"
+  },
+  "toast": {
+    "createdTutorial": "Учебник создан",
+    "deletedTutorial": "Учебник удален.",
+    "deletedUser": "Пользователь удален",
+    "failedToCreateTutorial": "Не удалось создать учебник.",
+    "failedToDeleteTutorial": "Не удалось удалить учебник.",
+    "failedToDeleteUser": "Не удалось удалить пользователя",
+    "failedToUpdateInfo": "Не удалось обновить информацию о пользователе.",
+    "failedToUpdatePassword": "Не удалось обновить пароль.",
+    "failedToUpdateRole": "Не удалось обновить роль",
+    "failedToUpdateTutorial": "Не удалось обновить учебник.",
+    "failedToUpdateUser": "Не удалось обновить пользователя",
+    "updatedInfo": "Информация о пользователе обновлена.",
+    "updatedPassword": "Пароль обновлен.",
+    "updatedRole": "Роль обновлена",
+    "updatedTutorial": "Обновленное руководство",
+    "updatedUser": "Сведения о пользователе обновлены.",
+    "uploadedTutorial": "Учебное пособие загружено."
   }
 }
